<resources>
    <string name="app_name">VB LIFE</string>
    <string name="tip_number_length">请先输入手机号码</string>
    <string name="tip_number_format">您输入的手机号码不正确</string>
    <string name="tip_password_length">密码长度为6-20位</string>
    <string name="local_img">相册图片</string>
    <string name="take_photo">拍照上传</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="confirm">确认</string>
    <string name="server_err">服务系统繁忙，请您稍后再试！</string>
    <string name="failed">系统繁忙, 请稍后再试</string>
    <string name="token_inviled_please_login">登录已过期，请重新登录</string>

    <string name="identify_digist">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="hint_search">请输入搜索关键字</string>
    <string name="loading_now">正在加载中...</string>

    <!--主页文字-->
    <string name="login_success">登录成功</string>
    <string name="regist_success">注册成功</string>
    <string name="update_psd_success">密码修改成功</string>
    <string name="where_want_go">您想去哪儿</string>
    <string name="click_again_exit">再点一次退出程序</string>
    <string name="location_failed_input">定位失败，请手动输入</string>
    <string name="location_failed_input_dialog">定位信号弱,请先输入起点</string>
    <string name="location_failed">位置获取失败</string>
    <string name="loation_doing">正在获取上车地点……</string>
    <string name="where_out">您在哪下车</string>
    <string name="where_in">您在哪上车</string>
    <string name="please_input_content">请输入搜索内容</string>
    <string name="build">建筑</string>
    <string name="no_car_near">附近暂无车辆，请您稍后再试</string>
    <string name="patching_car">正在派车</string>
    <string name="cancel_order">取消订单</string>
    <string name="sure_to_call">确认呼叫</string>
    <string name="fee_rule">计费规则</string>
    <string name="sure_cancel_order">确定要取消订单吗？</string>
    <string name="wait_continue">继续等待</string>
    <string name="no_net_dialog_message">未连接到网络，请检查WIFI或数据是否开启</string>
    <string name="ready_to_exit_login">您确定要退出登录？</string>
    <string name="set">设置</string>
    <string name="i_know_it">知道了</string>
    <string name="me_know_it">我知道了</string>
    <string name="no_gps_tip">定位信号弱，轻点此处打开GPS提高定位准确性</string>
    <string name="input_picture_words">输入图片中的文字</string>
    <string name="pic_code_failed">图形验证码失败</string>
    <string name="re_send">重新发送</string>
    <string name="click_refresh_picture">看不清？点击刷新</string>
    <string name="input_identify_code">输入验证码</string>
    <string name="input_login_password">输入密码</string>
    <string name="psd_rule_tip">密码由6-20位数字字母组成，字母区分大小写</string>
    <string name="forget_psd">忘记密码</string>
    <string name="login_in">登录</string>
    <string name="login_or_regist">登录/注册</string>
    <string name="update_psd">修改密码</string>
    <string name="xiaolanba_agreement">小蓝巴服务协议</string>
    <string name="about_us">关于我们</string>
    <string name="current_version">当前版本号</string>
    <string name="update_phone">修改手机号</string>
    <string name="input_psd">输入密码</string>
    <string name="input_phone">输入手机号</string>
    <string name="exit_login">退出登录</string>
    <string name="input_phone_for_contact_you">为方便司机联系你，请输入手机号</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="next_state">下一步</string>
    <string name="login_means_agree">登录即表示您已同意</string>
    <string name="phone_invalid">手机号格式不正确</string>
    <string name="new_psd_cannot_equal_last">新密码不能和原密码一致</string>
    <string name="psd_invalid">密码格式不正确</string>
    <string name="please_input_real_psd">请输入正确的密码</string>
    <string name="has_send_code_phone">已向%s发送验证码</string>
    <string name="some_time_resend">%d秒后重新发送</string>
    <string name="short_resend">%d秒后重发</string>
    <string name="set_password">设置密码</string>
    <string name="set_new_password">设置新密码</string>
    <string name="you_have_change_phone">您绑定的手机号已更换为\n%s</string>
    <string name="xiaolanba_rule">《小蓝巴用户协议》</string>
    <string name="matching_your_car">车辆正在匹配中……</string>
    <string name="call_blue_bus">呼叫小蓝巴</string>
    <string name="about">约</string>
    <string name="yuan">元</string>
    <string name="number_of_person">乘车人数</string>
    <string name="order_wait_car">等待乘车</string>
    <string name="order_car_arrived">车辆到达</string>
    <string name="order_running">行程中</string>
    <string name="order_finish">行程结束</string>
    <string name="order_need_to_pay">您有%d个未完成的订单</string>
    <string name="into_order_detail">进入行程</string>
    <string name="repeat_order_tip">您有一个未完成的订单,请勿重复下单</string>
    <string name="estimate_total">预估总费用</string>
    <string name="qbf">起步费</string>
    <string name="scf">时长费</string>
    <string name="lcf">里程费</string>
    <string name="jfgz">计费规则</string>
    <string name="estimate_money">预估费用</string>
    <string name="src_pw">原始密码</string>
    <string name="input_src_pw">请输入原密码</string>
    <string name="new_pw">新密码</string>
    <string name="input_new_pw">请输入6-20位密码</string>
    <string name="new_phone">新手机</string>
    <string name="new_phone_hint">请输入未注册的手机号</string>
    <string name="phone_has_regist">您输入的手机号已注册</string>
    <string name="your_cur_phone">您当前的手机号为</string>
    <string name="tip_rule_pw">密码需包含数字和字母，字母区分大小写</string>
    <string name="scope_pw">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="send">发送</string>
    <string name="app_infor">小蓝巴（乘客端）V%s</string>
    <string name="company">深圳通天下公共交通发展有限公司</string>
    <string name="email">邮箱</string>
    <string name="company_tel">服务热线</string>
    <string name="order">订单</string>
    <string name="my_order">我的订单</string>
    <string name="invited_friend">邀请好友</string>
    <string name="feedback">意见反馈</string>
    <string name="problemback">问题反馈</string>
    <string name="letter_to_user">致新用户的一封信</string>
    <string name="message">消息</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="no_more_data">已经到底啦~</string>
    <string name="city_search_hint">城市中文名或拼音</string>
    <string name="hot_city">★热门城市</string>
    <!--无数据提示语，统一写在一块-->
    <string name="no_order_data">暂无订单</string>
    <string name="no_net_tip">加载失败，请检查网络或稍后再试</string>
    <string name="no_content_tip">暂无数据</string>
    <string name="no_city_has_searched">暂无结果，换个词试试吧</string>
    <!--无数据提示语，统一写在一块-->
</resources>
