<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_white_selector"
            android:orientation="vertical" >

            <Button
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="44dip"
                android:background="@null"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_15" />

            <LinearLayout
                android:id="@+id/item_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <View style="@style/HorizontalLineStyle" />

                <Button
                    android:id="@+id/btn_tackPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/list_item_transparent_selector"
                    android:text="@string/take_photo"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_16" />

                <View
                    style="@style/HorizontalLineStyle" />

                <Button
                    android:id="@+id/btn_album"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/list_item_transparent_selector"
                    android:text="@string/local_img"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_height="5dp"
            style="@style/HorizontalLineStyle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/list_item_white_selector" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/list_item_transparent_selector"
                android:text="@string/cancel"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>